<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditKendaraanFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <EditText
        android:id="@+id/edit_namaMobil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Nama Mobil"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/edit_Alamat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Alamat"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_namaMobil" />
        <EditText
            android:id="@+id/edit_harga"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Harga"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_Alamat" />
        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="SAVE"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_harga"
            android:layout_marginTop="20dp"
            />
        <Button
            android:id="@+id/button_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="UPDATE"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_save"
            android:layout_marginTop="20dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>