<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.home.HomeActivity"
    tools:ignore="HardcodedText" >
    <data>
        <variable
            name="viewmodel"
            type="com.example.sewakendaraan.viewModel.HomeViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/bottomNav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="100dp"
                android:clipToPadding="false"
                android:scrollbars="vertical">
            </FrameLayout>

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottomAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:fabCradleMargin="10dp"
                app:fabCradleRoundedCornerRadius="10dp"
                app:fabCradleVerticalOffset="10dp">

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottomNavigationView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:background="@android:color/transparent"
                    app:menu="@menu/bottom_nav_menu"/>
            </com.google.android.material.bottomappbar.BottomAppBar>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addFB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_anchor="@id/bottomAppBar"
                android:backgroundTint="@color/purple_500"
                android:tintMode="@color/white"
                app:srcCompat="@drawable/ic_baseline_add_24"
                android:onClick="moveAddPesanan"
                android:contentDescription="Add" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:indeterminate="true"
            android:background="@drawable/bg_rounded_square"
            android:backgroundTint="@color/Transparant"
            android:indeterminateTint="@color/Purple_Bamma"
            android:visibility="@{viewmodel.progressBarMutableLiveData}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>